--- a/src/components/regiont/regiont.css
+++ b/src/components/regiont/regiont.css
@@ -12,7 +12,12 @@ margin: 0px;}
 .putout{
         
      
-         
+   
+
+}
+.action{
+    width: 65px;
+    right: 0px;
 }
 .putin{    font-size: 18px;
          left: 30%;
