--- a/src/components/region/region.css
+++ b/src/components/region/region.css
@@ -24,6 +24,12 @@ margin: 0px;}
       margin-bottom: 30px;
 
  }
+ .list{left: 0px;
+  width: 50px;}
+ .action{
+    width: 65px;
+    right: 0px;
+}
  .in-categor{
 
  
