--- a/src/components/userdeal/userdeal.css
+++ b/src/components/userdeal/userdeal.css
@@ -30,8 +30,18 @@ margin: 0px;}
 
 
 }
+
+.ltable  {
+
+ 
+}
+.action{
+
+  width: 80px;
+}
+
 .add-user{
-  width: 300px;
+  width:400px;
   margin: auto;
 }
 .ant-pagination-item-link,.ant-pagination-item {
